deploy/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commerce-coach
  namespace: commerce-coach
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: commerce-coach
  ports:
    - name: http
      port: 4010
      targetPort: http
      appProtocol: http
